--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,6 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: dmm-checklist
 
     steps:
       - name: Checkout
@@ -30,7 +27,6 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: dmm-checklist/package-lock.json
 
       - name: Install
         run: npm ci
@@ -41,7 +37,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dmm-checklist/dist
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
