--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,10 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    # 🔑 THIS IS THE MISSING PIECE
+    environment: github-pages
+
     steps:
       - uses: actions/checkout@v4
 
@@ -30,14 +34,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          # Vite only exposes env vars that start with VITE_
           VITE_MAINTENANCE_MODE: ${{ vars.VITE_MAINTENANCE_MODE }}
-
-      - name: List dist contents
-        run: |
-          ls -la dist
-          ls -la dist/assets
-          sed -n '1,40p' dist/index.html
 
       - uses: actions/upload-pages-artifact@v3
         with:
@@ -46,5 +43,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment: github-pages
     steps:
       - uses: actions/deploy-pages@v4
